Update feature list on info page

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -33,14 +33,8 @@
                     <li>Upload new versions of your maps (the old map will display a link to the newer version, while
                         all collections will directly include the new map)
                     </li>
-                    <li>
-                        <del>Create map collections</del>
-                        <span class="badge badge-pill badge-secondary">soon™</span>
-                    </li>
-                    <li>
-                        <del>Edit your map collections</del>
-                        <span class="badge badge-pill badge-secondary">soon™</span>
-                    </li>
+                    <li>Create map collections</li>
+                    <li>Edit your map collections</li>
                     <li>Log in and log out</li>
                     <li>Change your password</li>
                     <li>Add and remove an email address to/from your profile</li>
