--- a/mapsapp/templates/mapsapp/collection.html
+++ b/mapsapp/templates/mapsapp/collection.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block js %}
-    {% include 'mapsapp/maps_js_block.html' %}
+    {% include 'mapsapp/snippets/maps_js_block.html' %}
     <script src="{% static 'mapsapp/js/jszip.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/FileSaver.js' %}"></script>
     <script src="{% static 'mapsapp/js/collection.js' %}"></script>
