--- a/mapsapp/templates/mapsapp/index.html
+++ b/mapsapp/templates/mapsapp/index.html
@@ -10,5 +10,5 @@
 {% endblock %}
 
 {% block js %}
-    {% include 'mapsapp/maps_js_block.html' %}
+    {% include 'mapsapp/snippets/maps_js_block.html' %}
 {% endblock %}
