--- a/mapsapp/templates/mapsapp/search.html
+++ b/mapsapp/templates/mapsapp/search.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block js %}
-    {% include 'mapsapp/maps_js_block.html' %}
+    {% include 'mapsapp/snippets/maps_js_block.html' %}
 {% endblock %}
