--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -14,11 +14,37 @@
             </div>
         {% endif %}
 
-        <div class="offset-md-1 col-md-5 col-12 text-center">
-            {% if rms.image_set %}
-                <img class="mapscreenshot img-fluid" src="{{ rms.image_set.all.0.file.url }}"/>
+        <div class="offset-md-1 col-md-5 col-12 text-center mapscreenshot-container">
+            {% if rms.image_set.count == 0 %}
+                <div class="mapscreenshot">
+                    <img class="img-fluid" src="{% static '/mapsapp/images/empty.png' %}"/>
+                </div>
             {% else %}
-                <img class="mapscreenshot img-fluid" src="{% static '/mapsapp/images/empty.png' %}"/>
+                {% if rms.image_set.count == 1 %}
+                    <div class="mapscreenshot">
+                        <img class="img-fluid" src="{{ rms.image_set.all.0.file.url }}"/>
+                    </div>
+                {% else %}
+                    <div id="imageCarousel" class="carousel slide mapscreenshot" data-ride="carousel">
+                        <div class="carousel-inner">
+                            {% for i in rms.image_set.all %}
+                                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                    <img class="d-block w-100" src="{{ i.file.url }}" alt="Slide {{ forloop.counter }}">
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#imageCarousel" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#imageCarousel" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                {% endif %}
             {% endif %}
         </div>
         <div class="col-md-5 col-12">
@@ -33,6 +59,15 @@
                 </div>
             </div>
             <div class="row pt-5">
+                <div class="col-12 text-center">
+                    <p>
+                        <a href="{{ rms.file.url }}" class="card-link btn btn-secondary map-download">Download map</a>
+                        <a href="{{ rms.url }}" class="card-link btn btn-outline-secondary"
+                           target="_blank">Website</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row pt-1">
                 <div class="col-12 align-self-end">
                     <div class="tags">Tags:
                         {% for tag in rms.tags.all %}
@@ -48,16 +83,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12 text-center">
-            <p>
-                <a href="{{ rms.file.url }}" class="card-link btn btn-secondary map-download">Download map</a>
-                <a href="{{ rms.url }}" class="card-link btn btn-outline-secondary"
-                   target="_blank">Website</a>
-            </p>
         </div>
     </div>
     {% if rms.information %}
@@ -77,4 +102,9 @@
 {% endblock %}
 
 {% block content %}
+{% endblock %}
+
+{% block js %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="{% static 'mapsapp/js/bootstrap.min.js' %}"></script>
 {% endblock %}
