Replace jQuery with local version

--- a/mapsapp/templates/mapsapp/mappack.html
+++ b/mapsapp/templates/mapsapp/mappack.html
@@ -67,6 +67,6 @@
     </div>
 {% endblock %}
 {% block js %}
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/mappack.js' %}"></script>
 {% endblock %}
