fixup! Replace jQuery with local version

--- a/mapsapp/templates/mapsapp/mymaps.html
+++ b/mapsapp/templates/mapsapp/mymaps.html
@@ -44,7 +44,7 @@
 {% endblock %}
 
 {% block js %}
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/popper.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/bootstrap.min.js' %}"></script>
 {% endblock %}
