--- a/mapsapp/templates/mapsapp/snippets/maps_js_block.html
+++ b/mapsapp/templates/mapsapp/snippets/maps_js_block.html
@@ -1,4 +1,4 @@
 {% load static %}
 <script type="text/javascript">var API_URL = "{{API_URL}}"</script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'mapsapp/js/aoe2map.js' %}"></script>
