--- a/mapsapp/templates/mapsapp/editcollection.html
+++ b/mapsapp/templates/mapsapp/editcollection.html
@@ -68,7 +68,7 @@
 {% endblock %}
 
 {% block js %}
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/tagsinput.js' %}"></script>
     <script src="{% static 'mapsapp/js/typeahead.bundle.js' %}"></script>
     <script type="text/javascript">
