--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -87,7 +87,7 @@
     </div>
     {% if rms.information %}
         <div class="row pt-4">
-            <div class="offset-md-2 col-md-8 col-12">
+            <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 offset-md-1 col-md-10 col-12">
                 <div class="card">
                     <div class="card-header">
                         Information
