--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -3,102 +3,107 @@
 
 
 {% block subtitle %}
-    <div class="row">
+    <div class="offset-md-1 col-md-10 col-12 singlemap-area">
+        <div class="row">
 
-        {% if rms.newer_version %}
-            <div class="offset-md-1 col-md-10 col-12 text-center">
-                <div class="alert alert-info" role="alert">
-                    A newer version of this map is available!
-                    <a href="{% url 'map' rms_id=rms.newer_version.uuid %}" class="alert-link">Check it out!</a>
+            {% if rms.newer_version %}
+                <div class="col-12 text-center">
+                    <div class="alert alert-info" role="alert">
+                        A newer version of this map is available!
+                        <a href="{% url 'map' rms_id=rms.newer_version.uuid %}" class="alert-link">Check it out!</a>
+                    </div>
+                </div>
+            {% endif %}
+
+            <div class="col-md-6 col-12 text-center mapscreenshot-container">
+                {% if rms.image_set.count == 0 %}
+                    <div class="mapscreenshot">
+                        <img class="img-fluid" src="{% static '/mapsapp/images/empty.png' %}"/>
+                    </div>
+                {% else %}
+                    {% if rms.image_set.count == 1 %}
+                        <div class="mapscreenshot">
+                            <img class="img-fluid" src="{{ rms.image_set.all.0.file.url }}"/>
+                        </div>
+                    {% else %}
+                        <div id="imageCarousel" class="carousel slide mapscreenshot" data-ride="carousel">
+                            <div class="carousel-inner">
+                                {% for i in rms.image_set.all %}
+                                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                        <img class="d-block w-100" src="{{ i.file.url }}"
+                                             alt="Slide {{ forloop.counter }}">
+                                    </div>
+                                {% endfor %}
+                            </div>
+                            <a class="carousel-control-prev" href="#imageCarousel" role="button"
+                               data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#imageCarousel" role="button"
+                               data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endif %}
+            </div>
+            <div class="col-md-6 col-12">
+                <div class="row pt-5">
+                    <div class="col-12 text-center">
+                        <h4 class="card-title"><a href="{% url 'map' rms_id=rms.uuid %}">{{ rms.name }}</a>
+                            <small class="text-muted"> {{ rms.version }}</small>
+                        </h4>
+                        <h5 class="card-subtitle mb-2 text-muted">by {{ rms.authors }}</h5>
+                        <p class="card-text font-italic">{{ rms.description }}</p>
+
+                    </div>
+                </div>
+                <div class="row pt-5">
+                    <div class="col-12 text-center">
+                        <p>
+                            <a href="{{ rms.file.url }}" class="card-link btn btn-secondary map-download">Download
+                                map</a>
+                            <a href="{{ rms.url }}" class="card-link btn btn-outline-secondary"
+                               target="_blank">Website</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row pt-1">
+                    <div class="col-12 align-self-end">
+                        <div class="tags">Tags:
+                            {% for tag in rms.tags.all %}
+                                <a href="{% url 'tags' url_fragment=tag.id|stringformat:"s/" %}" line
+                                   class="badge badge-secondary">{{ tag.name }}</a>
+                            {% endfor %}
+                        </div>
+                        <div class="tags">Versions:
+                            {% for tag in rms.versiontags.all %}
+                                <a href="{% url 'version' version_name=tag.name %}"
+                                   class="badge badge-secondary">{{ tag.name }}</a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% if rms.information %}
+            <hr style="width: 50%;">
+            <div class="row">
+                <div class="offset-xl-2 col-xl-8 offset-lg-1 col-lg-10 col-12">
+                    <div class="card">
+                        <div class="card-header">
+                            Information
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text markdown-text">{{ rms.information }}</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         {% endif %}
-
-        <div class="offset-md-1 col-md-5 col-12 text-center mapscreenshot-container">
-            {% if rms.image_set.count == 0 %}
-                <div class="mapscreenshot">
-                    <img class="img-fluid" src="{% static '/mapsapp/images/empty.png' %}"/>
-                </div>
-            {% else %}
-                {% if rms.image_set.count == 1 %}
-                    <div class="mapscreenshot">
-                        <img class="img-fluid" src="{{ rms.image_set.all.0.file.url }}"/>
-                    </div>
-                {% else %}
-                    <div id="imageCarousel" class="carousel slide mapscreenshot" data-ride="carousel">
-                        <div class="carousel-inner">
-                            {% for i in rms.image_set.all %}
-                                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                    <img class="d-block w-100" src="{{ i.file.url }}" alt="Slide {{ forloop.counter }}">
-                                </div>
-                            {% endfor %}
-                        </div>
-                        <a class="carousel-control-prev" href="#imageCarousel" role="button"
-                           data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#imageCarousel" role="button"
-                           data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-                {% endif %}
-            {% endif %}
-        </div>
-        <div class="col-md-5 col-12">
-            <div class="row pt-5">
-                <div class="col-12 text-center">
-                    <h4 class="card-title"><a href="{% url 'map' rms_id=rms.uuid %}">{{ rms.name }}</a>
-                        <small class="text-muted"> {{ rms.version }}</small>
-                    </h4>
-                    <h5 class="card-subtitle mb-2 text-muted">by {{ rms.authors }}</h5>
-                    <p class="card-text font-italic">{{ rms.description }}</p>
-
-                </div>
-            </div>
-            <div class="row pt-5">
-                <div class="col-12 text-center">
-                    <p>
-                        <a href="{{ rms.file.url }}" class="card-link btn btn-secondary map-download">Download map</a>
-                        <a href="{{ rms.url }}" class="card-link btn btn-outline-secondary"
-                           target="_blank">Website</a>
-                    </p>
-                </div>
-            </div>
-            <div class="row pt-1">
-                <div class="col-12 align-self-end">
-                    <div class="tags">Tags:
-                        {% for tag in rms.tags.all %}
-                            <a href="{% url 'tags' url_fragment=tag.id|stringformat:"s/" %}" line
-                               class="badge badge-secondary">{{ tag.name }}</a>
-                        {% endfor %}
-                    </div>
-                    <div class="tags">Versions:
-                        {% for tag in rms.versiontags.all %}
-                            <a href="{% url 'version' version_name=tag.name %}"
-                               class="badge badge-secondary">{{ tag.name }}</a>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-    {% if rms.information %}
-        <div class="row pt-4">
-            <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 offset-md-1 col-md-10 col-12">
-                <div class="card">
-                    <div class="card-header">
-                        Information
-                    </div>
-                    <div class="card-body">
-                        <div class="card-text markdown-text">{{ rms.information }}</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endif %}
 {% endblock %}
 
 {% block content %}
