--- a/mapsapp/templates/mapsapp/editmap.html
+++ b/mapsapp/templates/mapsapp/editmap.html
@@ -19,7 +19,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.class }}" role="alert">
-                        {{ message.text }}
+                        {{ message.text | safe }}
                     </div>
                 {% endfor %}
             {% endif %}
