--- a/mapsapp/templates/mapsapp/newmap.html
+++ b/mapsapp/templates/mapsapp/newmap.html
@@ -66,7 +66,7 @@
                 </div>
             {% endfor %}
 
-            <button type="submit" class="btn btn-primary">Upload</button>
+            <button type="submit" class="btn btn-primary" id="upload">Upload</button>
         </form>
     </div>
 {% endblock %}
