--- a/mapsapp/templates/mapsapp/register.html
+++ b/mapsapp/templates/mapsapp/register.html
@@ -56,7 +56,7 @@
                 </div>
             {% endfor %}
 
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary" id="register">Register</button>
         </form>
     </div>
 {% endblock %}
