Add filedrop support to the newmap and editmap pages

--- a/mapsapp/static/mapsapp/css/aoe2maps.css
+++ b/mapsapp/static/mapsapp/css/aoe2maps.css
@@ -70,3 +70,30 @@ ul.mapslist li:before {
     text-align: center;
     padding-bottom: 1rem;
 }
+
+#drop-info {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 500;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(222, 222, 222, 0.3);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#drop-info span {
+    background-color: #777;
+    font-size: 4rem;
+    font-weight: bold;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.dragging #drop-info {
+    display: flex;
+}
