--- a/mapsapp/templates/mapsapp/editmap.html
+++ b/mapsapp/templates/mapsapp/editmap.html
@@ -12,7 +12,12 @@
 {% endblock %}
 
 {% block content %}
+    <div id="drop-info">
+        <span>Drop image(s) here!</span>
+    </div>
     <div class="col-md-8 offset-md-2">
+
+        <div id="alert-area"></div>
 
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -68,8 +73,13 @@
 {% endblock %}
 {% block js %}
     <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'mapsapp/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/tagsinput.js' %}"></script>
     <script src="{% static 'mapsapp/js/typeahead.bundle.js' %}"></script>
-    <script type="text/javascript">var ALLTAGS_PREFETCH_URL = "{% url 'api:alltags' %}";</script>
+    <script type="text/javascript">
+        var ALLTAGS_PREFETCH_URL = "{% url 'api:alltags' %}";
+        var ACCEPT_DROP = ['image'];
+    </script>
     <script src="{% static 'mapsapp/js/tags.js' %}"></script>
+    <script src="{% static 'mapsapp/js/fileinputs-drop.js' %}"></script>
 {% endblock %}
