--- a/mapsapp/templates/mapsapp/newmap.html
+++ b/mapsapp/templates/mapsapp/newmap.html
@@ -12,11 +12,16 @@
 {% endblock %}
 
 {% block content %}
+    <div id="drop-info">
+        <span>Drop a <code>.rms</code> file <b>or</b> image(s)!</span>
+    </div>
     <div class="col-md-8 offset-md-2">
 
         <p>You want to upload a new map? Just fill out the fields below with meaningful data, add your <tt>.rms</tt>
             file
             and a screenshot of the map (or another meaningful image) and hit Upload!</p>
+
+        <div id="alert-area"></div>
 
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -72,8 +77,13 @@
 {% endblock %}
 {% block js %}
     <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'mapsapp/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/tagsinput.js' %}"></script>
     <script src="{% static 'mapsapp/js/typeahead.bundle.js' %}"></script>
-    <script type="text/javascript">var ALLTAGS_PREFETCH_URL = "{% url 'api:alltags' %}";</script>
+    <script type="text/javascript">
+        var ALLTAGS_PREFETCH_URL = "{% url 'api:alltags' %}";
+        var ACCEPT_DROP = ['rms', 'image'];
+    </script>
     <script src="{% static 'mapsapp/js/tags.js' %}"></script>
+    <script src="{% static 'mapsapp/js/fileinputs-drop.js' %}"></script>
 {% endblock %}
