--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -14,6 +14,7 @@
 
     <title>aoe2maps{% block pagetitle %}{% endblock %}</title>
     {% block style %}{% endblock %}
+    {% block additionalheader %}{% endblock %}
 </head>
 
 <body>
