--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -10,6 +10,8 @@
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="{{ rms.description }}"/>
     <meta property="og:image" content="{% if rms.image_set.count == 0 %}{{ top_url }}{% static '/mapsapp/images/empty.png' %}{% else %}{{ top_url }}{{ rms.image_set.all.0.file.url }}{% endif %}"/>
+    <meta property="og:image:width" content="600"/>
+    <meta property="og:image:height" content="311"/>
     <!-- Google+ / Schema.org -->
     <meta itemprop="name" content="{{ rms.name }}"/>
     <meta itemprop="headline" content="{{ rms.name }}{% if rms.version %} {{ rms.version }}{% endif %}"/>
