--- a/mapsapp/templates/mapsapp/editcollection.html
+++ b/mapsapp/templates/mapsapp/editcollection.html
@@ -61,7 +61,7 @@
                 </div>
             {% endfor %}
 
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary" id="save">Save</button>
         </form>
         <div style="padding-bottom: 5rem;"></div>
     </div>
