Add info text to mappack page

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="col-md-8 offset-md-2">
 
-        <div class="card">
+        <div class="card" id="features">
             <div class="card-body">
                 <h5 class="card-title">Features</h5>
                 <p class="card-text">Without an account on this site, you can:</p>
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="how-to-play">
             <div class="card-body">
                 <h5 class="card-title">How To Play Random Map Scripts</h5>
                 <p class="card-text">Depending on the version you use, save the <code>.rms</code> files you can download
@@ -92,7 +92,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="wololo-kingdoms">
             <div class="card-body">
                 <h5 class="card-title">Wololo Kingdoms</h5>
                 <p class="card-text">Play the HD expansions on Voobly with the Wololo Kingdoms mod! You must own the
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="how-to-create-rms">
             <div class="card-body">
                 <h5 class="card-title">How To Create Random Map Scripts</h5>
                 <p class="card-text">
@@ -135,7 +135,7 @@
             </ul>
         </div>
 
-        <div class="card">
+        <div class="card" id="zr-maps">
             <div class="card-body">
                 <h5 class="card-title">ZR Maps</h5>
                 <p class="card-text">ZR stands for "Zip Random" – a ZR map is a zip file that contains a random map
@@ -155,7 +155,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="screenshots">
             <div class="card-body">
                 <h5 class="card-title">How To Create Full Map Screenshots</h5>
                 <p class="card-text">Press <code>Ctrl+F12</code> ingame. This only works in the original / Voobly
@@ -163,7 +163,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="email-address">
             <div class="card-body">
                 <h5 class="card-title">How We Use Your Email Address</h5>
                 <p class="card-text">When you have an account on this website, you <em>can</em> add an email address.
@@ -197,7 +197,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="contact">
             <div class="card-body">
                 <h5 class="card-title">Contact</h5>
                 <p class="card-text">{{ contact | safe | linebreaks }}</p>
