Add filter input to maps and collections pages

--- a/mapsapp/templates/mapsapp/collections.html
+++ b/mapsapp/templates/mapsapp/collections.html
@@ -10,6 +10,8 @@
 
 {% block content %}
     <div class="col-md-6 offset-md-3">
+        {% include 'mapsapp/snippets/filter.html' %}
+
         <ul class="mapslist">
             {% for collection in collections %}
                 <li><a href="{% url 'collection' collection_id=collection.uuid %}">{{ collection.name }}
@@ -18,4 +20,8 @@
             {% endfor %}
         </ul>
     </div>
+{% endblock %}
+
+{% block js %}
+    <script src="{% static 'mapsapp/js/list-filter.js' %}"></script>
 {% endblock %}
