--- a/mapsapp/templates/mapsapp/mymaps.html
+++ b/mapsapp/templates/mapsapp/mymaps.html
@@ -9,6 +9,8 @@
 {% block content %}
     <div class="col-md-6 offset-md-3">
         {% if rmss %}
+            {% include 'mapsapp/snippets/filter.html' %}
+
             <ul class="maplist">
                 {% for rms in rmss %}
                     <li>
@@ -47,4 +49,5 @@
     <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/popper.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'mapsapp/js/list-filter.js' %}"></script>
 {% endblock %}
