Display map names in a single column on the 'Edit Collection' page

--- a/mapsapp/templates/mapsapp/editcollection.html
+++ b/mapsapp/templates/mapsapp/editcollection.html
@@ -4,6 +4,11 @@
 
 {% block additionalcss %}
     <link rel="stylesheet" href="{% static 'mapsapp/css/tagsinput.css' %}">
+    <style>
+        .bootstrap-tagsinput .badge {
+            display: block;
+        }
+    </style>
 {% endblock %}
 
 {% block subtitle %}
